--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,12 @@
             <version>4.17.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version> <!-- ✅ latest stable -->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -211,6 +217,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
+                    <release>17</release> <!-- Optional, or use source+target -->
                     <fork>true</fork>
                     <compilerArgs>
                         <arg>--add-exports</arg>
