--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <release>17</release> <!-- Optional, or use source+target -->
+                    <source>17</source>
+                    <target>17</target>
                     <fork>true</fork>
                     <compilerArgs>
                         <arg>--add-exports</arg>
