--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Run Tests
         run: mvn clean test
 
+      - name: Run Cucumber Tests
+        run: mvn clean test
+
       - name: Archive Cucumber Report
         if: always()
         uses: actions/upload-artifact@v4
