--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -32,7 +32,7 @@ jobs:
         run: mvn clean test
 
       - name: Run Cucumber Tests
-        run: mvn clean test
+        run: mvn clean test -X
 
       - name: Archive Cucumber Report
         if: always()
